# WOT-Configurator

./: AppInitializer.cpp  AppInitializer.h  BackupManager.cpp  BackupManager.h  ChangeTracker.cpp  ChangeTracker.h  ConfigEditor.cpp  ConfigEditor.h  ConfigManager.cpp  ConfigManager.h  FileValidator.cpp  MainWindow.cpp  MainWindow.h  ProfileManager.cpp  ProfileManager.h  README.md  info preferences.txt  main.cpp  main.h
App/Restored Configs/: preferences_10_02_2025.xml  preferences_11_02_2025.xml  preferences_18_02_2025.xml  preferences_19_04_2025.xml  preferences_2025_04_22_025755.xml  preferences_21_02_2025.xml  preferences_21_04_2025.xml
App/Saved Configs/: preferences.xml
App/User Configs/: preferences.xml  preferences_17_02_2025.xml  preferences_18_02_2025.xml  preferences_2025_04_28_0.xml  preferences_2025_04_28_100.xml  preferences_test.xml
App/User Data/: logs.txt  userdata.txt
Archive/: AppInitializer.h  BackupManager.h  ChangeTracker.h  ConfigEditor.h  ConfigManager.h  FileValidator.h  MainWindow.h
QT/WOTSettingsGUI/: AppInitializer.cpp  BackupManager.cpp  CMakeLists.txt  ChangeTracker.cpp  ConfigEditor.cpp  ConfigManager.cpp  FileValidator.cpp  ProfileManager.cpp  aichatdialog.cpp  aichatdialog.h  aichatdialog.ui  configeditdialog.cpp  configeditdialog.h  configeditdialog.ui  helpdialog.cpp  helpdialog.h  helpdialog.ui  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  preferences_data.h  resources.qrc  settingdelegate.cpp  settingdelegate.h  statsdialog.cpp  statsdialog.h  statsdialog.ui
